# sprint-composer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: sprint-composer.md
docs/specs/: sprint-composer.md
docs/tech-specs/: sprint-composer__T01.md  sprint-composer__T02.md  sprint-composer__T03.md  sprint-composer__T04.md  sprint-composer__T05.md  sprint-composer__T06.md  sprint-composer__T07.md  sprint-composer__T08.md
fixtures/: taxonomy_template.json
src/fixtures/: reference_bank.json  taxonomy_template.json  transcript.json  transcript.txt
src/sprint_composer/: cli.py  layer1.py  layer2.py  layer3.py  models.py  transcript.py
tests/: test_cli.py  test_fixtures.py  test_layer1.py  test_layer2.py  test_layer3.py  test_transcript.py
