[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprint-composer"
version = "0.1.0"
description = "CLI agent that turns a raw meeting transcript into a structured 5-block sprint-plan proposal"
requires-python = ">=3.11"
dependencies = ["google-generativeai>=0.7"]

[project.scripts]
sprint-composer = "sprint_composer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sprint_composer"]
include = ["src/sprint_composer/py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
